Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
 						<div class="flex items-center gap-3">
 							<img
-								src="assets/img/landscape-durable.png"
+								src="assets/img/landscape-durable_new.png"
 								alt="Landscape"
 								class="h-6 sm:h-7 md:h-8 w-auto drop-shadow"
 							/>
@@ -148,7 +148,7 @@
 				>
 					<!-- Tu logotipo (centrado, proporción similar al screenshot) -->
 					<img
-						src="assets/img/logo.png"
+						src="assets/img/logo_new.png"
 						alt="Brand"
 						class="h-12 md:h-14 w-auto"
 					/>
@@ -299,7 +299,7 @@
 										<div class="font-extrabold tracking-tight leading-none">
 											<!-- Logo en lugar de "Landscape" -->
 											<img
-												src="assets/img/landscape-complete-purple.webp"
+												src="assets/img/landscape-complete_new.png"
 												alt="Landscape"
 												class="mx-auto lg:h-60 w-auto drop-shadow"
 												loading="eager"
@@ -347,7 +347,7 @@
 										<div class="font-extrabold tracking-tight leading-none">
 											<!-- Logo en lugar de "Landscape" -->
 											<img
-												src="assets/img/landscape-complete-purple.webp"
+												src="assets/img/landscape-complete_new.png"
 												alt="Landscape"
 												class="mx-auto lg:h-60 w-auto drop-shadow"
 												loading="eager"
@@ -398,7 +398,7 @@
 										<div class="font-extrabold tracking-tight leading-none">
 											<!-- Logo en lugar de "Landscape" -->
 											<img
-												src="assets/img/landscape-complete-purple.webp"
+												src="assets/img/landscape-complete_new.png"
 												alt="Landscape"
 												class="mx-auto lg:h-60 w-auto drop-shadow"
 												loading="eager"
@@ -449,7 +449,7 @@
 										<div class="font-extrabold tracking-tight leading-none">
 											<!-- Logo en lugar de "Landscape" -->
 											<img
-												src="assets/img/landscape-complete-purple.webp"
+												src="assets/img/landscape-complete_new.png"
 												alt="Landscape"
 												class="mx-auto lg:h-60 w-auto drop-shadow"
 												loading="eager"
@@ -500,7 +500,7 @@
 										<div class="font-extrabold tracking-tight leading-none">
 											<!-- Logo en lugar de "Landscape" -->
 											<img
-												src="assets/img/landscape-complete-purple.webp"
+												src="assets/img/landscape-complete_new.png"
 												alt="Landscape"
 												class="mx-auto lg:h-60 w-auto drop-shadow"
 												loading="eager"
@@ -548,7 +548,7 @@
 										<div class="font-extrabold tracking-tight leading-none">
 											<!-- Logo en lugar de "Landscape" -->
 											<img
-												src="assets/img/landscape-complete-purple.webp"
+												src="assets/img/landscape-complete_new.png"
 												alt="Landscape"
 												class="mx-auto lg:h-60 w-auto drop-shadow"
 												loading="eager"
@@ -783,6 +783,7 @@
 				</div>
 			</div>
 		</section>
+
 		<!-- ==================== BUSCADOR DE LLANTAS · ALT B ==================== -->
 		<section
 			class="relative py-10 bg-gradient-to-b from-neutral-950 via-neutral-900 to-neutral-950"
@@ -2120,7 +2121,7 @@
 					<div class="lg:col-span-4">
 						<div class="flex items-center gap-3">
 							<img
-								src="assets/img/logo_morado.png"
+								src="assets/img/logo_morado_new.png"
 								alt="Landscape"
 								class="h-8 w-auto"
 							/>
