--- a/pages/news_uber.html
+++ b/pages/news_uber.html
@@ -74,7 +74,7 @@
 
 						<div class="flex items-center gap-3">
 							<img
-								src="../assets/img/landscape-durable.png"
+								src="../assets/img/landscape-durable_new.png"
 								alt="Landscape"
 								class="h-6 sm:h-7 md:h-8 w-auto drop-shadow"
 							/>
@@ -148,7 +148,7 @@
 				>
 					<!-- Tu logotipo (centrado, proporción similar al screenshot) -->
 					<img
-						src="../assets/img/logo.png"
+						src="../assets/img/logo_new.png"
 						alt="Brand"
 						class="h-12 md:h-14 w-auto"
 					/>
@@ -457,7 +457,7 @@
 					<div class="lg:col-span-4">
 						<div class="flex items-center gap-3">
 							<img
-								src="../assets/img/logo_morado.png"
+								src="../assets/img/logo_morado_new.png"
 								alt="Landscape"
 								class="h-8 w-auto"
 							/>
