--- a/pages/about_us.html
+++ b/pages/about_us.html
@@ -74,7 +74,7 @@
 
 						<div class="flex items-center gap-3">
 							<img
-								src="../assets/img/landscape-durable_new.png"
+								src="../assets/img/landscape-durable.png"
 								alt="Landscape"
 								class="h-6 sm:h-7 md:h-8 w-auto drop-shadow"
 							/>
@@ -564,19 +564,30 @@
 						</p>
 
 						<div class="mt-4 flex items-center gap-3 text-white/80">
-							<a href="#" class="hover:text-white"
+							<a
+								href="https://www.facebook.com/landscape.durable.tires/"
+								class="hover:text-white"
+								target="_blank"
 								><i class="fa-brands fa-facebook-f"></i
 							></a>
-							<a href="#" class="hover:text-white"
+							<a
+								href="https://www.instagram.com/landscape_durable_tires/"
+								class="hover:text-white"
+								target="_blank"
 								><i class="fa-brands fa-instagram"></i
 							></a>
-							<a href="#" class="hover:text-white"
+							<a
+								href="https://x.com/Landscape_D_T"
+								class="hover:text-white"
+								target="_blank"
 								><i class="fa-brands fa-x-twitter"></i
 							></a>
-							<a href="#" class="hover:text-white"
+							<a
+								href="https://www.youtube.com/@Landscape_Durable_Tires"
+								class="hover:text-white"
+								target="_blank"
 								><i class="fa-brands fa-youtube"></i
 							></a>
-							<span class="ml-3 text-xs text-white/50">Follow us</span>
 						</div>
 					</div>
 
