--- a/pages/sizes.html
+++ b/pages/sizes.html
@@ -110,16 +110,32 @@
 						<!-- <button aria-label="Buscar" class="hover:opacity-80">
 							<i class="fa-solid fa-magnifying-glass text-xl"></i>
 						</button> -->
-						<a href="#" aria-label="Facebook" class="hover:opacity-80"
+						<a
+							href="https://www.facebook.com/landscape.durable.tires/"
+							aria-label="Facebook"
+							class="hover:opacity-80"
+							target="_blank"
 							><i class="fa-brands fa-facebook-f text-xl"></i
 						></a>
-						<a href="#" aria-label="Instagram" class="hover:opacity-80"
+						<a
+							href="https://www.instagram.com/landscape_durable_tires/"
+							aria-label="Instagram"
+							class="hover:opacity-80"
+							target="_blank"
 							><i class="fa-brands fa-instagram text-xl"></i
 						></a>
-						<a href="#" aria-label="X/Twitter" class="hover:opacity-80"
+						<a
+							href="https://x.com/Landscape_D_T"
+							aria-label="X/Twitter"
+							class="hover:opacity-80"
+							target="_blank"
 							><i class="fa-brands fa-x-twitter text-xl"></i
 						></a>
-						<a href="#" aria-label="YouTube" class="hover:opacity-80"
+						<a
+							href="https://www.youtube.com/@Landscape_Durable_Tires"
+							aria-label="YouTube"
+							class="hover:opacity-80"
+							target="_blank"
 							><i class="fa-brands fa-youtube text-xl"></i
 						></a>
 					</div>
@@ -860,19 +876,30 @@
 						</p>
 
 						<div class="mt-4 flex items-center gap-3 text-white/80">
-							<a href="#" class="hover:text-white"
+							<a
+								href="https://www.facebook.com/landscape.durable.tires/"
+								class="hover:text-white"
+								target="_blank"
 								><i class="fa-brands fa-facebook-f"></i
 							></a>
-							<a href="#" class="hover:text-white"
+							<a
+								href="https://www.instagram.com/landscape_durable_tires/"
+								class="hover:text-white"
+								target="_blank"
 								><i class="fa-brands fa-instagram"></i
 							></a>
-							<a href="#" class="hover:text-white"
+							<a
+								href="https://x.com/Landscape_D_T"
+								class="hover:text-white"
+								target="_blank"
 								><i class="fa-brands fa-x-twitter"></i
 							></a>
-							<a href="#" class="hover:text-white"
+							<a
+								href="https://www.youtube.com/@Landscape_Durable_Tires"
+								class="hover:text-white"
+								target="_blank"
 								><i class="fa-brands fa-youtube"></i
 							></a>
-							<span class="ml-3 text-xs text-white/50">Follow us</span>
 						</div>
 					</div>
 
