Refactor header positioning and update CSS variables for improved layout management

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			}
 			/* si ya expusiste la altura en --fixedbar-h, úsala; si no, pon 80px aprox */
 			[id] {
-				scroll-margin-top: var(--fixedbar-h, 80px);
+				scroll-margin-top: var(--nav-stack-h, 80px);
 			}
 		</style>
 	</head>
