Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
 							preload="none"
 							data-video
 						>
-							<source src="assets/video/tire_grip.webm" type="video/webm" />
+							<source src="assets/video/off_Road.webm" type="video/webm" />
 							<!-- <source src="videos/slide1.webm" type="video/webm"> -->
 						</video>
 
@@ -1882,13 +1882,12 @@
 					<!-- TEXTO (izquierda) -->
 					<div>
 						<p class="mt-4 text-white/80 leading-relaxed">
-							We, Landscape Tires, are dedicated to manufacturing tires that
-							meet the needs of modern drivers, whether it's for daily
-							commuting, off-road adventures, or high-performance driving.
-							"Landscape - Maximum Performance" is always the essence of our
-							brand. Our tire are durability, excellent service life, and
-							outstanding performance, at same time, to maintain the highest
-							standards of safety and value.
+							Landscape Tires USA, Inc. is a U.S.-registered professional tire
+							company headquartered in Los Angeles, California, focused on
+							durability and long-lasting performance. All products are
+							independently designed, using proprietary molds and produced at
+							high-standard facilities in Thailand, meeting DOT and FMVSS
+							standards.
 						</p>
 
 						<h3 class="mt-6 font-extrabold text-white text-xl">
