--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 					data-menu
 				>
 					<a
-						href="#why-landscape-strength"
+						href="#search-tire"
 						class="relative block max-w-none text-left leading-tight after:absolute after:left-0 after:-bottom-1 after:h-[2px] after:w-0 after:rounded-full after:bg-white/80 after:transition-all after:duration-300 hover:after:w-8 lg:text-center lg:max-w-[16ch] lg:after:left-1/2 lg:after:-translate-x-1/2"
 						>Find Your Perfect Tire</a
 					>
