Refactor CSS by removing unused styles and update HTML video preload attribute for improved performance

--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
 							muted
 							loop
 							playsinline
-							preload="none"
+							preload="auto"
 							data-video
 						>
 							<source src="assets/video/off_Road.webm" type="video/webm" />
@@ -1754,9 +1754,8 @@
 										Marketing Manager (U.S. Market)
 									</h5>
 									<span class="ml-auto text-[var(--accent)] text-sm"
-										><i class="fa-solid fa-location-dot"></i> Headquarters in
-										China (with overseas business trips/remote collaboration as
-										needed)</span
+										><i class="fa-solid fa-location-dot"></i> United States
+										(Flexible within major tire markets)</span
 									>
 								</div>
 								<p class="text-white/70 text-sm mt-2">
@@ -2692,12 +2691,7 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/TextPlugin.min.js"></script>
-		<script
-			src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/leaflet.js"
-			integrity="sha512-BwHfrr4c9kmRkLw6iXFdzcdWV/PGkVgiIyIWLLlTSXzWQzxuSg4DiQUCpauz/EWjgk5TYQqX/kvn9pG1NpYfqg=="
-			crossorigin="anonymous"
-			referrerpolicy="no-referrer"
-		></script>
+
 		<script src="js/main.js"></script>
 	</body>
 </html>
