Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -296,6 +296,7 @@
 							playsinline
 							preload="auto"
 							data-video
+							poster="assets/img/gallery/covers/v1.png"
 						>
 							<source src="assets/video/off_Road.webm" type="video/webm" />
 							<!-- <source src="videos/slide1.webm" type="video/webm"> -->
