--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
 							playsinline
 							preload="auto"
 							data-video
-							poster="assets/img/gallery/covers/v1.png"
+							poster="assets/img/gallery/covers/v1.webp"
 						>
 							<source src="assets/video/off_Road.webm" type="video/webm" />
 							<!-- <source src="videos/slide1.webm" type="video/webm"> -->
