Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 					<a
 						href="#about"
 						class="relative block max-w-none text-left leading-tight after:absolute after:left-0 after:-bottom-1 after:h-[2px] after:w-0 after:rounded-full after:bg-white/80 after:transition-all after:duration-300 hover:after:w-8 lg:text-center lg:max-w-[16ch] lg:after:left-1/2 lg:after:-translate-x-1/2"
-						>Why Landscape</a
+						>About us</a
 					>
 					<a
 						href="#corporate-news"
@@ -586,7 +586,7 @@
 			</div>
 		</section>
 
-		<!-- ==================== WHY LANDSCAPE — BRAND DIFFERENTIATION & STRENGTH ==================== -->
+		<!-- ==================== About us — BRAND DIFFERENTIATION & STRENGTH ==================== -->
 		<section
 			id="why-landscape-strength"
 			class="relative py-12 md:py-16 bg-gradient-to-b from-neutral-950 via-neutral-900 to-neutral-950"
@@ -604,8 +604,18 @@
 					</p>
 				</div>
 
+				<div class="mb-8">
+					<img
+						src="assets/img/gallery/brandDiff.png"
+						alt="Landscape — brand differentiation"
+						class="w-full h-full sm:h-64 md:h-92 lg:h-80 xl:h-[50rem] object-cover rounded-2xl border border-white/10 shadow-[0_16px_40px_rgba(0,0,0,.35)]"
+						loading="lazy"
+						decoding="async"
+					/>
+				</div>
+
 				<!-- Bloque 1: Diferenciadores clave -->
-				<div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-5">
+				<!-- <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-5">
 					<article class="wl-card">
 						<div class="space-y-3">
 							<div class="flex items-center gap-3">
@@ -729,7 +739,7 @@
 							</div>
 						</div>
 					</article>
-				</div>
+				</div> -->
 
 				<!-- Bloque 2: Fortaleza de marca (stats + premios) -->
 				<div class="mt-10 grid grid-cols-2 md:grid-cols-3 gap-4">
@@ -799,7 +809,6 @@
 				</div>
 			</div>
 		</section>
-
 		<!-- ==================== BUSCADOR DE LLANTAS · ALT B ==================== -->
 		<section
 			class="relative py-10 bg-gradient-to-b from-neutral-950 via-neutral-900 to-neutral-950"
@@ -2344,9 +2353,7 @@
 							<h6 class="text-white font-bold mb-3">Company</h6>
 							<ul class="text-white/70 text-sm space-y-2">
 								<li>
-									<a class="hover:text-white" href="#why-landscape"
-										>Why Landscape</a
-									>
+									<a class="hover:text-white" href="#why-landscape">About us</a>
 								</li>
 								<li>
 									<a class="hover:text-white" href="#why-landscape-strength"
@@ -2391,7 +2398,7 @@
 									box-shadow: 0 4px 0 rgba(0, 0, 0, 0.25);
 								"
 							>
-								Suscribirme
+								Subscribe
 							</button>
 						</form>
 						<p class="text-white/50 text-xs mt-2">
@@ -2402,16 +2409,18 @@
 						<div class="mt-6 text-white/70 text-sm space-y-1">
 							<p>
 								<i class="fa-solid fa-location-dot text-[var(--accent)]"></i>
-								Monterrey, MX · Houston, US
+								P.O. Box 552 San Dimas, CA91773
 							</p>
 							<p>
-								<a href="mailto:hello@landscape.io" class="hover:text-white"
+								<a
+									href="mailto:sales@landscapetires.com"
+									class="hover:text-white"
 									><i class="fa-solid fa-envelope text-[var(--accent)]"></i>
-									hello@landscape.io</a
+									sales@landscapetires.com</a
 								>
 							</p>
 							<p>
-								<a href="tel:+528100000000" class="hover:text-white"
+								<a href="tel:(909) 569 7012" class="hover:text-white"
 									><i class="fa-solid fa-phone text-[var(--accent)]"></i> +52 81
 									0000 0000</a
 								>
