--- a/pages/about_us.html
+++ b/pages/about_us.html
@@ -208,7 +208,7 @@
 					<a
 						href="#about-us"
 						class="relative block max-w-none text-left leading-tight after:absolute after:left-0 after:-bottom-1 after:h-[2px] after:w-0 after:rounded-full after:bg-white/80 after:transition-all after:duration-300 hover:after:w-8 lg:text-center lg:max-w-[16ch] lg:after:left-1/2 lg:after:-translate-x-1/2"
-						>Why Landscape</a
+						>About us</a
 					>
 					<a
 						href="#corporate-news"
@@ -249,13 +249,12 @@
 						<h2 class="text-3xl md:text-4xl font-black">About Landscape</h2>
 						<div class="mt-4 space-y-4 text-white/85 leading-relaxed">
 							<p>
-								We, Landscape Tires, are dedicated to manufacturing tires that
-								meet the needs of modern drivers, whether it's for daily
-								commuting, off-road adventures, or high-performance driving.
-								"Landscape - Maximum Performance" is always the essence of our
-								brand. Our tire are durability, excellent service life, and
-								outstanding performance, at same time, to maintain the highest
-								standards of safety and value.
+								Landscape Tires USA, Inc. is a U.S.-registered professional tire
+								company headquartered in Los Angeles, California, focused on
+								durability and long-lasting performance. All products are
+								independently designed, using proprietary molds and produced at
+								high-standard facilities in Thailand, meeting DOT and FMVSS
+								standards.
 							</p>
 						</div>
 
@@ -629,9 +628,7 @@
 							<h6 class="text-white font-bold mb-3">Company</h6>
 							<ul class="text-white/70 text-sm space-y-2">
 								<li>
-									<a class="hover:text-white" href="#why-landscape"
-										>Why Landscape</a
-									>
+									<a class="hover:text-white" href="#why-landscape">About us</a>
 								</li>
 								<li>
 									<a class="hover:text-white" href="#why-landscape-strength"
@@ -676,7 +673,7 @@
 									box-shadow: 0 4px 0 rgba(0, 0, 0, 0.25);
 								"
 							>
-								Suscribirme
+								Subscribe
 							</button>
 						</form>
 						<p class="text-white/50 text-xs mt-2">
@@ -687,16 +684,18 @@
 						<div class="mt-6 text-white/70 text-sm space-y-1">
 							<p>
 								<i class="fa-solid fa-location-dot text-[var(--accent)]"></i>
-								Monterrey, MX · Houston, US
+								P.O. Box 552 San Dimas, CA91773
 							</p>
 							<p>
-								<a href="mailto:hello@landscape.io" class="hover:text-white"
+								<a
+									href="mailto:sales@landscapetires.com"
+									class="hover:text-white"
 									><i class="fa-solid fa-envelope text-[var(--accent)]"></i>
-									hello@landscape.io</a
+									sales@landscapetires.com</a
 								>
 							</p>
 							<p>
-								<a href="tel:+528100000000" class="hover:text-white"
+								<a href="tel:(909) 569 7012" class="hover:text-white"
 									><i class="fa-solid fa-phone text-[var(--accent)]"></i> +52 81
 									0000 0000</a
 								>
@@ -999,6 +998,6 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/TextPlugin.min.js"></script>
-		<script src="js/main.js"></script>
+		<script src="../js/main.js"></script>
 	</body>
 </html>
