--- a/pages/sizes.html
+++ b/pages/sizes.html
@@ -211,7 +211,7 @@
 					<a
 						href="../index.html#about-us"
 						class="relative block max-w-none text-left leading-tight after:absolute after:left-0 after:-bottom-1 after:h-[2px] after:w-0 after:rounded-full after:bg-white/80 after:transition-all after:duration-300 hover:after:w-8 lg:text-center lg:max-w-[16ch] lg:after:left-1/2 lg:after:-translate-x-1/2"
-						>Why Landscape</a
+						>About us</a
 					>
 					<a
 						href="../index.html#corporate-news"
@@ -941,9 +941,7 @@
 							<h6 class="text-white font-bold mb-3">Company</h6>
 							<ul class="text-white/70 text-sm space-y-2">
 								<li>
-									<a class="hover:text-white" href="#why-landscape"
-										>Why Landscape</a
-									>
+									<a class="hover:text-white" href="#why-landscape">About us</a>
 								</li>
 								<li>
 									<a class="hover:text-white" href="#why-landscape-strength"
@@ -988,7 +986,7 @@
 									box-shadow: 0 4px 0 rgba(0, 0, 0, 0.25);
 								"
 							>
-								Suscribirme
+								Subscribe
 							</button>
 						</form>
 						<p class="text-white/50 text-xs mt-2">
@@ -999,16 +997,18 @@
 						<div class="mt-6 text-white/70 text-sm space-y-1">
 							<p>
 								<i class="fa-solid fa-location-dot text-[var(--accent)]"></i>
-								Monterrey, MX · Houston, US
+								P.O. Box 552 San Dimas, CA91773
 							</p>
 							<p>
-								<a href="mailto:hello@landscape.io" class="hover:text-white"
+								<a
+									href="mailto:sales@landscapetires.com"
+									class="hover:text-white"
 									><i class="fa-solid fa-envelope text-[var(--accent)]"></i>
-									hello@landscape.io</a
+									sales@landscapetires.com</a
 								>
 							</p>
 							<p>
-								<a href="tel:+528100000000" class="hover:text-white"
+								<a href="tel:(909) 569 7012" class="hover:text-white"
 									><i class="fa-solid fa-phone text-[var(--accent)]"></i> +52 81
 									0000 0000</a
 								>
